# BossFight

./: .gitignore  CMakeLists.txt  main.cpp
.cursor/rules/: bossfight-ai-instructions-full.mdc  bossfight-ai-instructions.mdc
.qtcreator/: CMakeLists.txt.user.069d10a
Assembler/: save_manager.docx  save_manager.s  saves_scene.docx  saves_scene.txt (копия)
backgrounds/: forest_bg.cpp  forest_bg.h
characters/: boss_golem.cpp  boss_golem.h  character.cpp  character.h  player.cpp  player.h
config/: common.h  config.cpp  config.h
levels/: ilevel.cpp  ilevel.h  level1.h  level1_assets.cpp  level1_assets.h  level2.cpp  level2.h
menu/: credits_scene.cpp  credits_scene.h  game_scene.cpp  game_scene.h  level_select_scene.cpp  level_select_scene.h  main_menu_scene.cpp  main_menu_scene.h  saves_scene.cpp  saves_scene.h  settings_scene.cpp  settings_scene.h  splash_scene.cpp  splash_scene.h
ui/: ui.cpp  ui.h
utils/: animation.cpp  animation.h  camera.cpp  camera.h  collision_system.cpp  collision_system.h  input_manager.cpp  input_manager.h  save_manager.cpp  save_manager.h  scene_manager.cpp  scene_manager.h  sound_manager.cpp  sound_manager.h  texture_manager.cpp  texture_manager.h
